--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,11 +45,12 @@
           <li><a href="/photos">Photos</a></li>
           <li><a href="/rails/info">Sitemap</a></li>
           <li><a href="/users">Users</a></li>
+          <li><a href="/my_likes">My Likes</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
           <% if current_user != nil %>
-          <li><a href="/users/edit">Edit <%= current_user.email %></a></li>
+          <li><a href="/users/edit">Edit <%= current_user.username %></a></li>
           <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Sign Out</a></li>
           <% else %>
           <li><a href="/users/sign_up">Sign Up</a></li>
