--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,32 +1,38 @@
 <div class="page-header">
-  <h1>
-    Photos
-    <a href="/photos/new" class="btn btn-lg btn-success">New Photo</a>
-  </h1>
+  <a href="/photos/new" class="btn btn-default btn-block">
+    <i class="fa fa-plus" aria-hidden="true"></i>
+  </a>
 </div>
 
-<div class="row">
-  <div class="col-md-12">
-    <table class="table table-striped table-hover">
-      <tr>
-        <th>Caption</th>
-        <th>Image</th>
-        <th>User</th>
-        <th>Actions</th>
-      </tr>
 
+
+<div class="row">
+  <div class="panel panel-default">
+    <div class="col-md-8 col-md-offset-2">
       <% @photos.each do |photo| %>
-      <tr>
-        <td><%= photo.caption %></td>
-        <td><%= photo.image %></td>
-        <td><%= photo.user_id %></td>
-        <td>
-          <a href="/photos/<%= photo.id %>" class="btn btn-primary">Show</a>
-          <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
-        </td>
-      </tr>
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= photo.user.username %></h3>
+      </div>
+      <div class="panel-body">
+        <img src ="<%= photo.image %>" class="img-responsive">
+      </div>
+      <div>
+        <h6> <%= photo.caption %> </h6>
+      </div>
+      <div>
+        <a href="/photos/<%= photo.id %>" class="btn btn-primary">Show</a>
+        <% if photo.user_id == current_user.id %>
+        <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
+          Edit
+        </a>
+        <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger" rel="nofollow">
+          Delete
+        </a>
+
+        <% else  %>
+        <% end %>
+      </div>
       <% end %>
-    </table>
+    </div>
   </div>
 </div>
