--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -15,7 +15,8 @@
       <% @photos.each do |photo| %>
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title"><%= photo.user.username %>
+          <h3 class="panel-title">
+            <%= photo.user.username %>
             <% time_diff=(Time.now - photo.created_at) %>
             <small><%= time_ago_in_words(Time.now - time_diff) %></small>
           </h3>
@@ -24,21 +25,69 @@
         <div class="panel-body">
           <a><img src ="<%= photo.image %>" class="img-responsive"></a>
           <h6> <%= photo.caption %> </h6>
-          <p>
-            <div>
-              <a href="/photos/<%= photo.id %>" class="btn btn-primary">Show</a>
-              <% if photo.user_id == current_user.id %>
-              <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
-                Edit
-              </a>
-              <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger" rel="nofollow">
-                Delete
-              </a>
 
-              <% else  %>
-              <% end %>
-            </div>
+          <p>
+            <% @check= Like.find_by(:user_id => current_user.id,:photo_id => photo.id)  %>
+            <% if @check != nil %>
+
+            <button class="btn btn-link">
+              <i class="fa fa-heart"></i>
+            </button>
+
+            <% else %>
+            <form action="/create_like" method="post">
+              <!-- Hidden input for authenticity token to protect from forgery -->
+              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+              <!--input for user_id -->
+              <input type="hidden" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= current_user.id %>">
+              <!--input for photo_id -->
+              <input type="hidden" id="photo_id" name="photo_id" placeholder="Photo" class="form-control" value="<%= photo.id %>">
+              <button class="btn btn-link">
+                <i class="fa fa-heart-o"></i>
+              </button>
+              <small class="text-muted">be the first to like this</small>
+            </form>
+            <% end %>
+
+
+            <form action="/create_comment" method="post">
+              <!-- Hidden input for authenticity token to protect from forgery -->
+              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+              <!-- input for photo_id -->
+              <input type="hidden" id="photo_id" name="photo_id" placeholder="Photo" class="form-control" value="<%= photo.id %>">
+              <!-- Label an input for body -->
+              <div class="form-group">
+                      <textarea id="body" name="body" placeholder="Body" class="form-control" rows="1"> Add a comment... </textarea>
+              </div>
+              <!-- input for user_id -->
+              <input type="hidden" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= current_user.id %>">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="submit">
+                  <i class="fa fa-commenting-o"></i>
+                </button>
+              </span>
+            </form>
+
           </p>
+
+
+
+
+
+          <div>
+            <a href="/photos/<%= photo.id %>" class="btn btn-primary">Show</a>
+            <% if photo.user_id == current_user.id %>
+            <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
+              Edit
+            </a>
+            <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger" rel="nofollow">
+              Delete
+            </a>
+
+            <% else  %>
+            <% end %>
+          </div>
+
         </div>
       </div>
       <% end %>
