--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -9,24 +9,26 @@
   </div>
 
 
-
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <% @photos.each do |photo| %>
       <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title">
+            <!-- DISPLAYS USERNAME AN TIME AGO OF PHOTO POSTED -->
             <%= photo.user.username %>
             <% time_diff=(Time.now - photo.created_at) %>
-            <small><%= time_ago_in_words(Time.now - time_diff) %></small>
+            <small><%= time_ago_in_words(Time.now - time_diff) %> ago </small>
           </h3>
         </div>
 
+        <!-- DISPLAYS CAPTION AND WHETHER USER LIKED THE PHOTO -->
         <div class="panel-body">
           <a><img src ="<%= photo.image %>" class="img-responsive"></a>
           <h6> <%= photo.caption %> </h6>
 
           <p>
+            <!-- #IF ALREADY LIKED SHOWS A HEART -->
             <% @check= Like.find_by(:user_id => current_user.id,:photo_id => photo.id)  %>
             <% if @check != nil %>
 
@@ -35,6 +37,7 @@
             </button>
 
             <% else %>
+            <!-- IF NOT LIKED THEN SHOWS AN OPEN HEART BUT ABLE TO MAKE IT A LIKE WITH THE HEART BOTTON -->
             <form action="/create_like" method="post">
               <!-- Hidden input for authenticity token to protect from forgery -->
               <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
@@ -50,23 +53,40 @@
             <% end %>
 
 
-            <form action="/create_comment" method="post">
-              <!-- Hidden input for authenticity token to protect from forgery -->
-              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-              <!-- input for photo_id -->
-              <input type="hidden" id="photo_id" name="photo_id" placeholder="Photo" class="form-control" value="<%= photo.id %>">
-              <!-- Label an input for body -->
-              <div class="form-group">
-                      <textarea id="body" name="body" placeholder="Body" class="form-control" rows="1"> Add a comment... </textarea>
-              </div>
-              <!-- input for user_id -->
-              <input type="hidden" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= current_user.id %>">
-              <span class="input-group-btn">
-                <button class="btn btn-default" type="submit">
-                  <i class="fa fa-commenting-o"></i>
-                </button>
-              </span>
-            </form>
+            <ul class="media-list">
+              <% photo.comments.each do |comment| %>
+              <li class="media">
+                <div class="media-body">
+                  <h6 class="media-heading">
+                    <%= comment.user.username %>
+                    <% time_diff=(Time.now - comment.created_at) %>
+                    <small><%= time_ago_in_words(Time.now - time_diff) %> ago </small>
+                  </h6>
+                  <%= comment.body %>
+                </div>
+              </li>
+              <% end %>
+
+              <!-- CREATE A COMMENT AND SUBMIT -->
+              <form action="/create_comment" method="post">
+                <!-- Hidden input for authenticity token to protect from forgery -->
+                <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+                <!-- input for photo_id -->
+                <input type="hidden" id="photo_id" name="photo_id" placeholder="Photo" class="form-control" value="<%= photo.id %>">
+                <!-- input for user_id -->
+                <input type="hidden" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= current_user.id %>">
+                <!-- Label an input for body -->
+                <div class="input-group">
+                  <input type="text" id="body" name="body" class="form-control" placeholder="Add a comment..." required>
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="submit">
+                      <i class="fa fa-commenting-o"></i>
+                    </button>
+                  </span>
+                </div>
+              </form>
+
+            </ul>
 
           </p>
 
